# 3Displayer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install.sh
data/cameras/: bicolor.txt  spider.txt  standard.txt  stereo.txt
data/cameras/bicolor/: blue_right.txt
data/cameras/spider/: 1.txt  4.txt  5.txt  6.txt  7.txt
data/cameras/standard/: standard.txt
data/config/: config.cfg  config.ini
data/light/: blue_sphere.txt  opposed.txt  red_sphere.txt  standard.txt
include/: array.h  basic.h  buffer.h  build.h  camera.h  color.h  config.h  coord.h  data.h  direction.h  display.h  draw.h  equation.h  event.h  frame.h  hypergrid.h  lens.h  light.h  multimedia.h  object.h  parametric.h  pixel.h  point.h  position.h  project.h  scene.h  solid.h  texture.h  view.h  window.h
scripts/: install.sh  untabify.sh
src/: CMakeLists.txt  array.c  basic.c  buffer.c  build.c  camera.c  color.c  config.c  coord.c  data.c  display.c  draw.c  equation.c  event.c  ext.c  frame.c  hypergrid.c  lens.c  light.c  main.c  multimedia.c  object.c  parametric.c  pixel.c  point.c  position.c  project.c  scene.c  solid.c  texture.c  window.c
src/SDL/: CMakeLists.txt  event.c  window.c
src/multimedia_SDL/: CMakeLists.txt  display.c  event.c  texture.c
src/multimedia_ncurses/: CMakeLists.txt  display.c  event.c  texture.c
src/ncurses/: CMakeLists.txt  event.c  event_old.c  window.c
test/: CMakeLists.txt  test_equation.c  test_position.c
